--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button type="submit">Search</button>
       </form>
     </section>
-    <section>
+    <section class="search-results">
       <section class="search-result">
         <img src="https://images.unsplash.com/photo-1682687220989-cbbd30be37e9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="desert">
         <a href="https://unsplash.com/photos/a-lone-person-walking-in-the-middle-of-a-desert-ZefdTSLstl0" target="_blank" rel="noopener noreferrer">
@@ -33,7 +33,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum, exercitationem pariatur dolorum veritatis provident maxime recusandae dicta, aspernatur beatae doloribus quas, sunt consequatur inventore facilis deserunt obcaecati unde nam.
         </a>
       </section>
-      <button>Show more</button>
     </section>
+    <button>Show more</button>
   </body>
 </html>
