Add script.js file and setup unsplash api key

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
       </section>
     </section>
     <button>Show more</button>
+    <script src="script.js"></script>
   </body>
-</html>
+  </html>
