Create all the elements we need in our script

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </a>
       </section>
     </section>
-    <button>Show more</button>
+    <button id="show-more-btn">Show more</button>
     <script src="script.js"></script>
   </body>
   </html>
